<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2023 InfoPoint. All rights reserved.
  ~
  ~ Licensed under the MIT License;
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mit-license.org/
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~   @author Valentino Bocchetti
  ~   First written in 13/6/2023 at 23:22
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_icon"
        android:orderInCategory="1"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search_icon"
        android:orderInCategory="2"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_fab"
        android:title=""
        android:orderInCategory="3"
        android:enabled="false"/>

    <item
        android:id="@+id/nav_starred"
        android:icon="@drawable/starred_icon"
        android:orderInCategory="4"
        android:title="@string/starred" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_icon"
        android:orderInCategory="5"
        android:title="@string/profile" />

</menu>