<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2023 InfoPoint. All rights reserved.
  ~
  ~ Licensed under the MIT License;
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mit-license.org/
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~   @author Valentino Bocchetti
  ~   First written in 15/6/2023 at 14:30
  ~
  -->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="13dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/art_work_card_propic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/artwork_icon"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/art_work_card_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artwork_name"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/art_work_card_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/placeholder_author"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <!-- Media -->
        <ImageView
            android:id="@+id/art_work_card_image_view"
            android:layout_width="match_parent"
            android:src="@drawable/logo_no_background"
            android:layout_height="279dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Date of production -->
            <TextView
                android:id="@+id/art_work_card_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art_work_date"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>